fix(playertext): title wrap first line at < 250px
- moved PlayerText module into Player directory

--- a/components/Player/PlayerText/PlayerText.module.scss
+++ b/components/Player/PlayerText/PlayerText.module.scss
@@ -5,7 +5,7 @@
 
   > * {
     display: inline-block;
-    white-space: break-spaces;
+    white-space: pre;
   }
 }
 
